# nix-cpp-demo

./: CMakeLists.txt  Makefile  README.md  shell.nix
include/tobim/: visit.hpp
src/: example.cpp
